Fix a bug that prevented updates while running on Linux